# srtla_send

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  receiver  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build-debian.yml  ci.yml  publish-bindings.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
bindings/typescript/: .npmignore  .npmrc  biome.json  package.json  tsconfig.build.json  tsconfig.json
bindings/typescript/src/: index.ts
bindings/typescript/src/sender/: index.test.ts  index.ts
bindings/typescript/src/telemetry/: index.test.ts  index.ts
bindings/typescript/tests/: telemetry-reader.test.ts
ci/: build-deb.sh
crates/network-sim/: Cargo.toml
crates/network-sim/src/: adaptive_srt_send.c  harness.rs  impairment.rs  lib.rs  scenario.rs  test_util.rs  topology.rs
crates/srtla-core/: Cargo.toml
crates/srtla-core/src/: config_snapshot.rs  lib.rs  mode.rs  priority.rs  test_helpers.rs
crates/srtla-core/src/connection/: ack_nak.rs  incoming.rs  mod.rs  rtt.rs
crates/srtla-core/src/connection/congestion/: classic.rs  enhanced.rs  mod.rs
crates/srtla-core/src/registration/: mod.rs  probing.rs
crates/srtla-core/src/selection/: mod.rs
crates/srtla-protocol/: Cargo.toml
crates/srtla-protocol/src/: builders.rs  lib.rs  types.rs
docs/: CONTROL_PROTOCOL.md  EXTENDED_KEEPALIVE.md  EXTENSIONS.md  KEYFRAME_PRIORITY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  RTT_THRESHOLD_SCHEDULING.md
src/: config.rs  connection.rs  control.rs  control_socket.rs  ewma.rs  extensions.rs  kalman.rs  lib.rs  main.rs  metrics.rs  mode.rs  priority.rs  priority_listener.rs  protocol.rs  registration.rs  sender.rs  stats.rs  subscriptions.rs  telemetry_file.rs  test_helpers.rs  toggles.rs  toml_config.rs  utils.rs
src/connection/: ack_nak.rs  batch_recv.rs  batch_send.rs  bitrate.rs  congestion.rs  incoming.rs  mod.rs  packet_io.rs  reconnection.rs  rtt.rs  socket.rs
src/connection/congestion/: classic.rs  enhanced.rs  mod.rs
src/net/: apple.rs  batch_recv.rs  mod.rs  socket.rs
src/protocol/: builders.rs  constants.rs  mod.rs  parsers.rs  types.rs
src/registration/: mod.rs  probing.rs
src/selection/: mod.rs  quality.rs
src/sender/: connections.rs  housekeeping.rs  keyframe.rs  mod.rs  packet_handler.rs  reload.rs  selection.rs  sequence.rs  status.rs  uplink.rs  uplink_recv.rs
src/sender/selection/: blest.rs  classic.rs  classifier.rs  edpf.rs  enhanced.rs  exploration.rs  iods.rs  link_cc.rs  mod.rs  quality.rs  rtt_threshold.rs  sbd.rs
src/tests/: config_tests.rs  connection_tests.rs  end_to_end_tests.rs  integration_tests.rs  keepalive_interop_tests.rs  mod.rs  protocol_tests.rs  registration_tests.rs  rtt_threshold_tests.rs  sender_tests.rs  stall_deselect_tests.rs  toggles_tests.rs
test-results/: task-1-allfeatures.txt  task-1-fakeclock.txt  task-1-frozen.txt  task-10-idle.txt  task-10-telemetry.txt  task-11-flake.txt  task-11-grep.txt  task-12-decision.txt  task-12-fulltest.txt  task-12-gitlog.txt  task-12-libtest.txt  task-12-pin.txt  task-13-ka.txt  task-13-nospam.txt  task-14-allow.txt  task-14-blanket.txt  task-14-clippy.txt  task-15-ci.txt  task-15-deny.txt  task-16-credit.txt  task-16-license.txt  task-18-coupling.txt  task-18-scaffold.txt  task-19-exports.txt  task-19-sender.txt  task-2-bareka.txt  task-2-encode.txt  task-20-null.txt  task-20-telemetry.txt  task-21-binding.txt  task-21-states.txt  task-22-pack.txt  task-22-wf.txt  task-3-decode.txt  task-3-malformed.txt  task-4-fresh.txt  task-4-reg.txt  task-5-dedup.txt  task-5-nak.txt  task-6-data.txt  (+8 more)
tests/: dry_run.rs  end_to_end_tests.rs  integration_tests.rs  netns_basic.rs  netns_failure.rs  netns_impairment.rs  netns_pr19_parity.rs  netns_scenario.rs  netns_stall_gate.rs  netns_wire_loss.rs  parser_proptest.rs  signal_parity.rs  srtla_wire_conformance.rs  telemetry_edge_cases.rs  telemetry_fixture_parity.rs
tests/common/: mod.rs
tests/fixtures/: telemetry-golden.json
