[workspace]
members = ["crates/network-sim"]

[package]
resolver = "3"
name = "srtla_send"
version = "3.0.0"
edition = "2024"
description = "SRT transport proxy with link aggregation for connection bonding (sender-side)"
license = "MIT"
authors = ["Thomas Lekanger <mail@datagutt.no>"]
repository = "https://github.com/irlserver/srtla_send"
homepage = "https://github.com/irlserver/srtla_send"
readme = "README.md"
keywords = ["srt", "streaming", "bonding", "aggregation", "networking"]
categories = ["network-programming", "multimedia"]
rust-version = "1.88"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = [
	"rt-multi-thread",
	"macros",
	"net",
	"time",
	"io-util",
	"signal",
	"sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
socket2 = { version = "0.6", features = ["all"] }
bytes = "1.11.0"
smallvec = "=2.0.0-alpha.12"
mimalloc = { version = "0.1", default-features = false, features = [
	"secure",
	"v3",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
test-internals = []

[lib]
name = "srtla_send"
path = "src/lib.rs"

[[bin]]
name = "srtla_send"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
assert_matches = "1"
network-sim = { path = "crates/network-sim" }

[profile.dev]
opt-level = 1

[profile.release-debug]
inherits = "release"
strip = false
debug = true
lto = "thin"

[profile.release-lto]
inherits = "release"
lto = "fat"
debug = false
strip = true
